# ublox_gui_flutter

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ublox_gui_flutter/: MainActivity.kt
android/app/src/main/kotlin/com/igorkili/ublox_gui_flutter/: MainActivity.kt
android/app/src/main/kotlin/com/igorkili/ublox_gui_flutter/raw_gnss/: GnssMeasurementMapper.kt  GnssRawChannel.kt  GpsLocationStream.kt
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/rtklib/src/: rtkcmn.c
ios/rtklib/src/ffi_api/: time.c
lib/: main.dart  native_add.dart  routes.dart
lib/components/: drawer.dart  map.dart  receiver.dart
lib/geodesy/: dms.dart  latlon-ellipsoidal.dart  vector3d.dart
lib/model/: Receiver.dart  ubx_tcp_listener.dart
lib/model/gnss/: constellation.dart  gnss_channel.dart  location.dart  measurment.dart  rinex_converter.dart
lib/model/rtklib/: Gtime.dart  constellation_type.dart  rtkrcv.dart  stream.dart  stream_const.dart
lib/model/ublox/: ubx_decoder.dart
lib/rtklib/: Gtime.dart  rtklib_impl.dart  rtkrcv.dart
lib/screens/: debug_screen.dart  settings_screen.dart
lib/screens/state/: ui_state.dart
lib/ublox/: ubx_decoder.dart
test/: widget_test.dart
